# devcontainor-python

.devcontainer/: devcontainer.json  postCreateCommand.sh
.git_bk/: config
langchain-dev/: .env sample  README.md  pyproject.toml
langchain-dev/src/: main.py
langchain-dev/src/langchain_dev/: __init__.py
